--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="container mx-auto">
             <div class="flex flex-col items-center gap-4 py-10">
-                <div class="relative w-[44%]">
+                <div class="relative lg:w-[45%]">
                     <div class="px-5 py-6 rounded-xl bg-white flex gap-5">
                         <div class="flex gap-4">
                             <div class="w-9 rounded-lg bg-light-gray flex flex-col gap-3 items-center h-fit">
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="relative w-[44%]">
+                <div class="relative lg:w-[45%]">
                     <div class="px-5 py-6 rounded-xl bg-white flex gap-5">
                         <div class="flex gap-4">
                             <div class="w-9 rounded-lg bg-light-gray flex flex-col gap-3 items-center h-fit">
@@ -83,7 +83,7 @@
                             <div class="flex justify-between">
                                 <div class="flex items-center gap-4">
                                     <img src="./src/download.jpeg" alt="" class="w-8 h-8 rounded-full object-cover" />
-                                    <span class="text-sm font-bold text-dark">amyrobson</span>
+                                    <span class="text-sm font-bold text-dark"> maxblagun</span>
                                     <span class="text-sm text-gray">1 month ago</span>
                                 </div>
                                 <div class="flex items-center gap-2">
@@ -127,7 +127,7 @@
 
                     <div class="relative">
                         <div
-                            class="px-5 py-6 rounded-xl bg-white flex gap-5 before:block before:absolute before:left-9 before:h-full before:bg-slate-200 before:w-[1px] before:top-0 mt-4 w-[88%] ml-auto">
+                            class="px-5 py-6 rounded-xl bg-white flex gap-5 before:block before:absolute before:left-3 lg:before:left-9 before:h-full before:bg-slate-200 before:w-[1px] before:top-0 mt-4 w-[95%] lg:w-[88%] ml-auto">
                             <div class="flex gap-4">
                                 <div class="w-9 rounded-lg bg-light-gray flex flex-col gap-3 items-center h-fit">
                                     <button class="text-[#cecbe5] font-bold text-base">+</button>
@@ -141,7 +141,7 @@
                                     <div class="flex items-center gap-4">
                                         <img src="./src/download.jpeg" alt=""
                                             class="w-8 h-8 rounded-full object-cover" />
-                                        <span class="text-sm font-bold text-dark">amyrobson</span>
+                                        <span class="text-sm font-bold text-dark">ramsesmiro</span>
                                         <span class="text-sm text-gray">1 month ago</span>
                                     </div>
                                     <div class="flex items-center gap-2">
@@ -175,16 +175,16 @@
                                 </div>
                                 <div class="pt-3">
                                     <p class="text-base text-gray">
-                                        Impressive! Though it seems the drag feature could be improved. But overall it
-                                        looks incredible. You've nailed design and the responsiveness at various
-                                        breakpoints
-                                        works really well.
+                                        <span class="text-brand font-semibold"> @maxblagun </span> If you're still new.
+                                        I'd recommend focusing on the fundamentals of HTML, CSS, ans JS before
+                                        considering React.It's very tempting to jump ahead but lay a solid foundation
+                                        first
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <div
-                            class="px-5 py-6 rounded-xl bg-white flex gap-5 before:block before:absolute before:left-9 before:h-full before:bg-slate-200 before:w-[1px] before:top-0 mt-4 w-[88%] ml-auto">
+                            class="px-5 py-6 rounded-xl bg-white flex gap-5 before:block before:absolute before:left-3 lg:before:left-9 before:h-full before:bg-slate-200 before:w-[1px] before:top-0 mt-4 w-[95%] lg:w-[88%] ml-auto">
                             <div class="flex gap-4">
                                 <div class="w-9 rounded-lg bg-light-gray flex flex-col gap-3 items-center h-fit">
                                     <button class="text-[#cecbe5] font-bold text-base">+</button>
@@ -198,47 +198,61 @@
                                     <div class="flex items-center gap-4">
                                         <img src="./src/download.jpeg" alt=""
                                             class="w-8 h-8 rounded-full object-cover" />
-                                        <span class="text-sm font-bold text-dark">amyrobson</span>
-                                        <span class="text-sm text-gray">1 month ago</span>
+                                        <div class="flex gap-2 items-center">
+                                            <span class="text-sm font-bold text-dark">juliusomo</span>
+                                            <span
+                                                class="px-2 py-[2px] font-semibold text-xs bg-brand text-white rounded">you</span>
+                                        </div>
+                                        <span class="text-sm text-gray">2 days ago</span>
                                     </div>
                                     <div class="flex items-center gap-2">
-                                        <svg xmlns="http://www.w3.org/2000/svg"
-                                            xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px"
-                                            y="0px" width="12" height="12" viewBox="0 0 511.63 511.631"
-                                            style="enable-background: new 0 0 511.63 511.631" xml:space="preserve">
-                                            <g>
+                                        <button
+                                            class="text-red-600 text-sm font-bold py-[2px] px-2 rounded border-0 outline-none flex items-center gap-2">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                                fill="currentColor" class="w-4 h-4">
+                                                <path fill-rule="evenodd"
+                                                    d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z"
+                                                    clip-rule="evenodd" />
+                                            </svg>
+                                            Delete
+                                        </button>
+                                        <button
+                                            class="text-brand text-sm font-bold py-[2px] px-2 rounded border-0 outline-none flex items-center gap-2">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                                fill="currentColor" class="w-4 h-4">
                                                 <path
-                                                    d="M496.5,233.842c-30.841-76.706-114.112-115.06-249.823-115.06h-63.953V45.693c0-4.952-1.809-9.235-5.424-12.85   c-3.617-3.617-7.896-5.426-12.847-5.426c-4.952,0-9.235,1.809-12.85,5.426L5.424,179.021C1.809,182.641,0,186.922,0,191.871   c0,4.948,1.809,9.229,5.424,12.847L151.604,350.9c3.619,3.613,7.902,5.428,12.85,5.428c4.947,0,9.229-1.814,12.847-5.428   c3.616-3.614,5.424-7.898,5.424-12.848v-73.094h63.953c18.649,0,35.349,0.568,50.099,1.708c14.749,1.143,29.413,3.189,43.968,6.143   c14.564,2.95,27.224,6.991,37.979,12.135c10.753,5.144,20.794,11.756,30.122,19.842c9.329,8.094,16.943,17.7,22.847,28.839   c5.896,11.136,10.513,24.311,13.846,39.539c3.326,15.229,4.997,32.456,4.997,51.675c0,10.466-0.479,22.176-1.428,35.118   c0,1.137-0.236,3.375-0.715,6.708c-0.473,3.333-0.712,5.852-0.712,7.562c0,2.851,0.808,5.232,2.423,7.136   c1.622,1.902,3.86,2.851,6.714,2.851c3.046,0,5.708-1.615,7.994-4.853c1.328-1.711,2.561-3.806,3.71-6.283   c1.143-2.471,2.43-5.325,3.854-8.562c1.431-3.237,2.43-5.513,2.998-6.848c24.17-54.238,36.258-97.158,36.258-128.756   C511.63,291.039,506.589,259.344,496.5,233.842z"
-                                                    id="id_101" style="fill: rgb(82, 89, 179)" />
-                                            </g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                            <g></g>
-                                        </svg>
-                                        <span class="text-brand font-bold text-sm"> Reply</span>
+                                                    d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32L19.513 8.2Z" />
+                                            </svg>
+
+                                            Edit
+                                        </button>
                                     </div>
                                 </div>
                                 <div class="pt-3">
                                     <p class="text-base text-gray">
-                                        Impressive! Though it seems the drag feature could be improved. But overall it
-                                        looks incredible. You've nailed design and the responsiveness at various
-                                        breakpoints
-                                        works really well.
+                                        <span class="text-brand font-semibold">@ramsesmiro</span> I couldn't agree more
+                                        with
+                                        this.Everything moves so fast and it always seems like everyone knows the
+                                        neatest library/framework. But the fundamentals are what stay constant
                                     </p>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="px-5 py-6 rounded-xl bg-white flex gap-5 mt-5">
+                        <div class="py-1">
+                            <img src="./src/download.jpeg" alt="" class="w-9 h-9 rounded-full object-cover" />
+                        </div>
+                        <div class="flex-1">
+                            <textarea name="" id="" cols="30" rows="3"
+                                class="border border-gray border-opacity-25 rounded-md w-full px-4 py-2 outline-none"
+                                placeholder="Add a comment.."></textarea>
+
+                        </div>
+                        <div>
+                            <button class="px-7 py-3 bg-brand text-white text-sm rounded-md uppercase font-bold">
+                                Send
+                            </button>
                         </div>
                     </div>
                 </div>
