--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                     <span class="text-sm font-bold text-dark">amyrobson</span>
                                     <span class="text-sm text-gray">1 month ago</span>
                                 </div>
-                                <div class="flex items-center gap-2">
+                                <div class="flex items-center gap-2 cursor-pointer">
                                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                         version="1.1" id="Capa_1" x="0px" y="0px" width="12" height="12"
                                         viewBox="0 0 511.63 511.631" style="enable-background: new 0 0 511.63 511.631"
@@ -58,7 +58,7 @@
                                         <g></g>
                                         <g></g>
                                     </svg>
-                                    <span class="text-brand font-bold text-sm"> Reply</span>
+                                    <span class="text-brand font-bold text-sm "> Reply</span>
                                 </div>
                             </div>
                             <div class="pt-3">
@@ -76,7 +76,7 @@
                         <div class="flex gap-4">
                             <div class="w-9 rounded-lg bg-light-gray flex flex-col gap-3 items-center h-fit">
                                 <button class="text-[#cecbe5] font-bold text-base">+</button>
-                                <span class="text-brand text-sm font-bold">12</span>
+                                <span class="text-brand text-sm font-bold">5</span>
                                 <button class="text-[#cecbe5] font-bold text-base">-</button>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                                     <span class="text-sm font-bold text-dark"> maxblagun</span>
                                     <span class="text-sm text-gray">1 month ago</span>
                                 </div>
-                                <div class="flex items-center gap-2">
+                                <div class="flex items-center gap-2 cursor-pointer">
                                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                         version="1.1" id="Capa_1" x="0px" y="0px" width="12" height="12"
                                         viewBox="0 0 511.63 511.631" style="enable-background: new 0 0 511.63 511.631"
@@ -133,7 +133,7 @@
                             <div class="flex gap-4">
                                 <div class="w-9 rounded-lg bg-light-gray flex flex-col gap-3 items-center h-fit">
                                     <button class="text-[#cecbe5] font-bold text-base">+</button>
-                                    <span class="text-brand text-sm font-bold">12</span>
+                                    <span class="text-brand text-sm font-bold">4</span>
                                     <button class="text-[#cecbe5] font-bold text-base">-</button>
                                 </div>
                             </div>
@@ -146,7 +146,7 @@
                                         <span class="text-sm font-bold text-dark">ramsesmiro</span>
                                         <span class="text-sm text-gray">1 month ago</span>
                                     </div>
-                                    <div class="flex items-center gap-2">
+                                    <div class="flex items-center gap-2 cursor-pointer">
                                         <svg xmlns="http://www.w3.org/2000/svg"
                                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px"
                                             y="0px" width="12" height="12" viewBox="0 0 511.63 511.631"
@@ -190,7 +190,7 @@
                             <div class="flex gap-4">
                                 <div class="w-9 rounded-lg bg-light-gray flex flex-col gap-3 items-center h-fit">
                                     <button class="text-[#cecbe5] font-bold text-base">+</button>
-                                    <span class="text-brand text-sm font-bold">12</span>
+                                    <span class="text-brand text-sm font-bold">2</span>
                                     <button class="text-[#cecbe5] font-bold text-base">-</button>
                                 </div>
                             </div>
